# todo_tasks

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-05723e5b8c9dcbfabe8a7aaee07e5306b50e15327176dce3eb62cb5a3ca2692a.json  query-144566c50f8a68540eedcaee664aef42438ee3e485f5bf85dc89f2a228406d40.json  query-5aaa013595588ab0880371671908fb94c1865816635bdfc25ac8feeb4ea02150.json  query-b762c2ed776cb9b802a642e260a72fbd4b810c195a64a95474708a17a8e3e307.json  query-d31fcaf8da680eca3b8fa3b9eb64c8ad9bb75c770f0e558c72931e9903b15b8c.json  query-f34f2ab5d886223530c88df72229d9c56d69117e7739a4d003a1237c111a30fd.json
client/: Cargo.toml
client/src/: cli.rs  main.rs
migrations/: 20260218140953_create_tasks.sql  20260313070204_init_schema.sql
server/: Cargo.toml
server/src/: core_functions.rs  handlers.rs  hash.rs  main.rs
slint-cli/: Cargo.toml  build.rs
slint-cli/src/: cli_slint.rs  main.rs  reqwest_functions.rs
slint-cli/ui/: app.slint  welcomescreen.slint
src/: cli.rs  main.rs  task_service.rs
