[package]
name = "apirust"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
state = "0.6.0"
