[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
state = "0.6.0"
jsonwebtoken = "9"
time = "0.3"
argon2 = { version = "0.5.3", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"