[package]
name = "slint-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
state = "0.6.0"
jsonwebtoken = "9"
time = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
slint-build = "1"